重点井日报

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a12-mobile-app",
+  "name": "oms2-mobile",
   "version": "1.0.0",
   "description": "井场实时监测与预警移动应用",
   "author": "a12 mobile member",
