--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
     "vue-datepicker": "^1.3.0",
+    "vue-instant": "^1.0.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
