--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.1",
+    "echarts": "^4.0.4",
     "jquery": "^3.3.1",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
