--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.1",
+    "bootstrap-colorpicker": "^2.5.2",
     "echarts": "^4.0.4",
     "jquery": "^3.3.1",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
     "vue-datepicker": "^1.3.0",
+    "vue-datepicker-local": "^1.0.14",
     "vue-instant": "^1.0.2",
     "vue-router": "^3.0.1"
   },
